# nonebot-plugin-ai-news

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/nonebot_plugin_ai_news/: __init__.py  commands.py  config.py  fetcher.py  runtime.py  scheduler.py  store.py
tests/: test_fetcher.py  test_store.py
