[build-system]
requires = ["hatchling"]
build-backend = "hatchling.backends"

[project]
name = "nonebot-plugin-ai-news"
version = "0.1.0"
description = "NoneBot2 plugin that collects AI news (models, tools, tech) from RSS feeds and pushes to subscribed groups on schedule."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  { name = "hacchiroku" }
]
dependencies = [
  "nonebot2>=2.4.2",
  "nonebot-adapter-onebot>=2.4.0",
  "nonebot-plugin-apscheduler>=0.5.0",
  "nonebot-plugin-localstore>=0.7.4",
  "httpx>=0.27.0",
  "feedparser>=6.0.0",
]

[project.urls]
Homepage = "https://github.com/ArisaTaki/nonebot-plugin-ai-news"
Repository = "https://github.com/ArisaTaki/nonebot-plugin-ai-news"

[project.entry-points."nonebot.plugin"]
nonebot_plugin_ai_news = "nonebot_plugin_ai_news"

[tool.hatch.build.targets.wheel]
packages = ["src/nonebot_plugin_ai_news"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
